# Watermark-Remover-Agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  langgraph.json  pdf_parse.py  pyproject.toml  requirements.txt
input/orders/: README.md
langchain/: __init__.py
langchain/agents/: __init__.py
langchain_core/: __init__.py  messages.py  runnables.py
langgraph/: __init__.py  graph.py
langgraph/graph/: __init__.py  message.py
scripts/: launch_gui.sh  launch_gui_wsl.bat  record_browser.py  run_agent.py  run_gui.py  run_order.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  model_functions.py
src/utils/: __init__.py  selenium_utils.py  transposition_utils.py
src/watermark_remover/: __init__.py
src/watermark_remover/agent/: __init__.py  graph_ollama.py  ollama_agent.py  order_of_worship_graph.py  prompts.py  tools.py  (+1 more)
tests/: test_agent_tools.py  test_extract_key_from_filename.py  test_graph_ollama.py  test_order_key_normalization.py  test_order_pdf_resolution.py  test_sanitize_title.py
watermark_remover/: __init__.py
watermark_remover/agent/: __init__.py  graph.py  graph_ollama.py  ollama_agent.py  order_graph.py  order_of_worship_graph.py  single_song_graph.py  tools.py
watermark_remover/inference/: __init__.py  model_functions.py
watermark_remover/tools/: __init__.py  pdf.py  scrape.py  upscale.py  watermark.py
watermark_remover/utils/: selenium_utils.py  transposition_utils.py
watermark_remover_agent/: .gitignore  Dockerfile  requirements.txt
watermark_remover_agent/watermark_remover/: __init__.py
(+6 files in other folders)
