[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "watermark-remover-agent"
version = "0.0.1"
dependencies = [
  "langgraph-cli[inmem]",
  "langchain",
  "reportlab",
  "torch",
  "torchvision",
]

[tool.setuptools.packages.find]
include = ["watermark_remover*"]