[tool.poetry]
name = "watermark-remover-agent"
version = "0.1.0"
description = "Watermark Remover Agent with enhanced scraping and logging"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "*"
langchain-ollama = "*"
reportlab = "*"
Pillow = "*"
torchvision = "*"
pytorch-msssim = "*"
opencv-python = "*"
selenium = "*"
webdriver-manager = "*"
requests = "*"
numpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"